Refactor image saving; Add content type handling